--- a/app/views/home/_search_results.html.erb
+++ b/app/views/home/_search_results.html.erb
@@ -20,14 +20,29 @@ $('#edit_movie_' + mv_id ).click(function() {
   <% @counter = 0 %>
   <% @movies.each do |mv| %>
    <div class="movie_listing" id="movie_listing_<%= mv.id %>">
+	
+
 	<div class="movie_poster"> <%= image_tag(mv.poster, width: '132', alt: "movie_poster") %> </div>
+
+	<% if @movies_top_ten.length < 10 %>
 		<%= form_for(@movies[@counter], remote:true, url: {action: "update_movie"}, html: {class: "nifty form"}) do |t| %>
 		  <%= hidden_field_tag(:user_id, @user.id) %>
 		  <%= hidden_field_tag(:id, mv.id) %>
-   		  <%= t.submit %>
+   		  <%= t.submit "Add to Faves", :class => 'button small radius alert' %>
    		<% end %>
+	<% else %>
+	<span> You've already faved 10 movies! Delete one before adding another! </span>
+	<% end %>
+
+
 	<% @counter = @counter + 1 %>
-	<p> <strong> Movie Title: </strong> <%= mv.title %> </p>
+
+	<p> <strong> Movie Title: </strong> 
+
+		<%= link_to mv.title, mv.link, :target => "_blank" %> 
+
+	</p>
+
         <p> <strong> Year: </strong> <%= mv.year %> </p>
 	<p> <strong> MPAA Rating: </strong> <%= mv.mpaa_rating %> </p>
 	<p> <strong> Starring: </strong> <%= mv.abridged_cast %>
