--- a/app/views/home/_top_ten.html.erb
+++ b/app/views/home/_top_ten.html.erb
@@ -1,10 +1,31 @@
 <% @counter = 1 %>
-
-
+<% @counter2 = 0 %>
 
 <% @movies_top_ten.each do |mvtt| %>
 
 	<p> <%= @counter %>. <%= mvtt.title %> </p>
+
+	<%= form_for(@movies_top_ten[@counter2].essay, remote:true, url: {action: "edit_essay"}, html: {class: "nifty form"}) do |t| %>
+		<%= hidden_field_tag(:user_id, @user.id) %>
+		<%= hidden_field_tag(:movie_id, mvtt.id) %>
+		<%= hidden_field_tag(:id, mvtt.essay.id) %>
+		<%= t.submit "Edit Essay" %>
+	<% end %>
+
+	<%= button_to "Delete Movie", { action: "delete_movie", id: @movies_top_ten[@counter2].id },
+                                method: :delete, :remote => true, data: { confirm: "Delete this movie and associated essay from favorites!?!? Are you sure?" } %>
+
+	<% unless @movies_top_ten.first.rank == mvtt.rank %>
+	        <%= button_to "Move Up", { action: "update_movie", id: @movies_top_ten[@counter2].id, move_up: "yes" },
+				method: :patch, :remote => true %>
+	<% end %>
+
+	<% unless @movies_top_ten.last.rank == mvtt.rank %>
+	        <%= button_to "Move Down", { action: "update_movie", id: @movies_top_ten[@counter2].id, move_down: "yes" },
+                                method: :patch, :remote => true %>
+	<% end %>
+
 	<% @counter = @counter + 1 %>
+	<% @counter2 = @counter2 + 1 %>
 
 <% end %>
