--- a/app/views/home/edit_essay.js.erb
+++ b/app/views/home/edit_essay.js.erb
@@ -1,1 +1,2 @@
 $( "#search_results" ).html( "<%= escape_javascript( render( :partial => "home/edit_essay" )) %>" );
+$( "#top_ten" ).html( "<%= escape_javascript( render( :partial => "top_ten" )) %>" );
