--- a/app/views/home/_edit_essay.html.erb
+++ b/app/views/home/_edit_essay.html.erb
@@ -3,9 +3,9 @@
 <div id="edit_essay_container">
 
 <% if flash[:notice] == "That movie has been deleted!" %>
-	<p> <%= flash[:notice] %></p>
+	<p class="red"> <%= flash[:notice] %></p>
 <% else %>
-<p> Editing essay for 	<span class="edit_movie_title"> <%= @movie.title %></span>  </p>
+<p> <span class="edit_form_white_text"> Editing essay for </span> <span class="edit_movie_title red"> <%= @movie.title %></span>  </p>
 <% end %>
 
 
@@ -15,14 +15,14 @@
 	<%= hidden_field_tag(:user_id, @user.id) %>
 	<%= hidden_field_tag(:movie_id, @essay.movie.id) %>
 	<%= hidden_field_tag(:id, @essay.id) %>
-  Title: <%= f.text_field :title %>
+<span class="edit_form_white_text">  Title: </span> <%= f.text_field :title %>
   <%= f.submit(:class => "radius button hidden tiny secondary") %></br>
   
   <% unless flash[:notice] == "" %> 
     <span class="red"><%= flash[:notice] %></span></br>
   <% end %>  
 
-  Body : <%= f.text_area(:body, :id => "body_area", :cols => 10, :rows => 90) %>
+<span class="edit_form_white_text">  Body : </span> <%= f.text_area(:body, :id => "body_area", :cols => 10, :rows => 90) %>
  
   <% unless flash[:notice] == "" %>                          
     <span class="red"><%= flash[:notice] %></span></br>
