--- a/app/views/home/_search_for_stuff.html.erb
+++ b/app/views/home/_search_for_stuff.html.erb
@@ -10,6 +10,57 @@
           <%= f.text_field :term %>
           <%= f.submit @button_label, :class => 'radius button hidden tiny secondary', :id => 'search_button', :remote => "true" %>
           <% end %>
-        </fieldset>
+	</fieldset>
+
+	  <%= form_for(:user, remote:true, url: {action: "show_user_lists"}, html: {class: "nifty form"}) do |f| %>
+	  <%= hidden_field_tag(:id, @user.id) %>
+	  <%= f.submit @button_label2, :class => 'radius button hidden small secondary', :id => 'show_user_list_button', :remote => "true" %>
+	  <% end %>
 
 </div>
+
+<div id="myModal" class="reveal-modal">
+  <h2>Awesome. I have it.</h2>
+  <p class="lead">Your couch.  It is mine.</p>
+  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+
+  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+
+  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+
+  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+
+  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+
+  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+
+  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+
+  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+
