added heroku url to setpage for registrations page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
 
 <script>
 	function set_page() {
-		if(!(window.location.href == 'http://localhost:3000/' || window.location.href == 'http://localhost:3000/users/password/new' || window.location.href == 'http://localhost:3000/home/index'))
+		if(!(window.location.href == 'http://localhost:3000/' || window.location.href == 'http://localhost:3000/users/password/new' || window.location.href == 'http://localhost:3000/home/index' || window.location.href == 'http://murmuring-coast-2847.herokuapp.com/' || window.location.href == 'http://murmuring-coast-2847.herokuapp.com/users/password/new' || window.location.href == 'http://murmuring-coast-2847.herokuapp.com/home/index'))
 
 		{			
 			(window.location.href = '/');
